--- a/main.css
+++ b/main.css
@@ -18,13 +18,15 @@ html{
     font-size: 10px;
     overflow-x: hidden;
 }
+::-webkit-scrollbar{
+    display: none;
+}
 section{
     padding: 10vw;
 }
 h2{
     font-family: 'Lato', sans-serif;
     font-size: 2.5rem;
-    text-align: justify;
     color: var(--black);
 }
 p{  
@@ -115,7 +117,7 @@ button:focus{
     grid-column: 1 / 3;
     background: linear-gradient(to right, var(--mColor), var(--sColor));
     padding: 1.50rem 0;
-    border: none;
+    border: none!important;
     outline: none;
     border-radius: 7px;
     transition: transform 200ms, color 200ms;
@@ -209,6 +211,7 @@ button:focus{
     display: flex;
     justify-content: space-between;
     width: 250vw;
+    
 }
 .acommodations > *{
     display: flex;
@@ -251,4 +254,62 @@ button:focus{
 }
 .fifth-section-container{
     padding: 2rem 0;
+}
+
+/*******************************************************************/
+@media only screen and (min-width: 768px){
+    section{
+        padding: 3rem;
+    }
+    .first-section{
+        background-image: url('./src/first.png');
+        background-position: center center;
+        background-size: cover;
+    }
+    .search{
+        background-color: white;
+        width: 70%;
+        padding: 3rem 2rem;
+        border-radius: 15px;
+        margin-left: 10vw;
+        box-shadow: 0px 0px 5px rgb(112, 112, 112);
+    }
+    .header-right nav ul li{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        cursor: pointer;
+    }
+    .li-special{
+        background-color: white;
+        border-radius: 5px;
+    }
+    .li-special a{
+        color: var(--black)!important;
+    }
+    .li-dis{
+        display: flex!important;
+    }
+    .header-right nav ul li a{
+        color: white;
+        font-size: 1.4rem;
+    }
+
+    /*********************************************/
+
+    .tenant-img{
+        width:15%;
+    }
+
+}
+@media only screen and (min-width:1024px){
+    .acommodations{
+        width: 100vw;
+        justify-content: center;
+    }
+    .acommodations > *{
+        width: 30%;
+    }
+    .acommodation-img{
+        width: 80%;
+    }
 }
