--- a/main.css
+++ b/main.css
@@ -257,7 +257,7 @@ button:focus{
 }
 
 /*******************************************************************/
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) and (max-width:1023px){
     section{
         padding: 3rem;
     }
